<resources>
  <string name="app_name">阿米教育</string>


  <!--网络错误相应-->
  <string name="error_un_know">服务器开了点小差</string>
  <string name="error_http">网络连接错误</string>
  <string name="error_api">访问地址出错</string>
  <string name="error_transformer">解析结果错误</string>
  <string name="error_system">服务器出错</string>
  <string name="error_account_freeze">账户被冻结，请联系管理员</string>
  <string name="error_api_no_permission">调用了无权限的API接口</string>
  <string name="error_login">用户名或者密码错误</string>
  <string name="error_http_400">请求失败</string>
  <string name="error_http_404">服务器资源找不到</string>
  <string name="error_http_500">服务器错误</string>
  <string name="error_http_402">请求方式错误</string>
  <string name="error_socket_timeout">网络超时</string>
  <string name="error_change">资源解析出错</string>
  <string name="error_know">未知错误</string>
  <string name="error_socket_unreachable">网络错误</string>
  <string name="loading">loading…</string>
  <string name="support_ui_empty_title_placeholder">暂时没有数据</string>
  <string name="support_ui_empty_subtitle_placeholder">点击屏幕刷新数据</string>
  <string name="support_ui_error_title_placeholder">无网络连接</string>
  <string name="support_ui_error_subtitle_placeholder">请连接到无线网络或者蜂窝数据网络</string>
  <string name="error_address">访问地址出错</string>
  <string name="error_json">信息转换错误</string>
  <string name="error_time">连接超时</string>
  <string name="dialog_cancel">取消</string>
  <string name="me">我的</string>
  <string name="home">主页</string>
  <string name="find">发现</string>
  <string name="fond">推荐</string>


  <!--默认的布局提示信息-->
  <string name="image_content" >图片信息</string>
  <string name="text_content">文本信息</string>
  <string name="month_fate">月利率</string>
  <string name="money">金额</string>
  <string name="repayment">还款</string>
  <string name="time">期限</string>
  <string name="thousand">万</string>
  <string name="CAR">购物车</string>
  <string name="black_name">黑名单</string>
    <string name="default_total">合计:0万</string>
    <string name="_0_0_0">月供0 利息0 费用0</string>
    <string name="_0">生成贷款方案(0)</string>
    <string name="match">产品匹配</string>
    <string name="_0_0_0_0">0个产品符合资质要求，推荐0，已选择0个</string>
    <string name="_0_1">月供最小</string>
    <string name="_1">修改策略</string>
    <string name="_0_">0%</string>
    <string name="back_name">黑名单</string>
    <string name="string_home">房产</string>
    <string name="quickly">快捷匹配</string>
    <string name="loan_size">贷款金额</string>
    <string name="loan_time">贷款时间</string>
    <string name="good_job">优质行业</string>
    <string name="credit">信用卡授权额度</string>
    <string name="repayment_month">每月按揭或抵押还款</string>
    <string name="handle">最近办理过贷款或信用卡</string>
    <string name="loan_0">0</string>
    <string name="loan_0_month">0</string>
    <string name="loan_ok">是</string>
    <string name="next">进一步完善资质</string>
    <string name="wan">万</string>
    <string name="month">月</string>
    <string name="home_no_pay">汽车</string>
    <string name="fill_car">信用</string>
    <string name="car_no_pay">按揭车</string>
    <string name="name_home">名下房产</string>
    <string name="quickly_matching">立即匹配贷款产品</string>
    <string name="House">房产</string>
    <string name="mortgage_home">按揭房</string>
    <string name="String_home">按揭房/抵押房估值</string>
    <string name="String_car">按揭/抵押车估值</string>
    <string name="defatult_money">0万</string>
    <string name="please_edit">请输入</string>
    <string name="please_select">请选择</string>
    <string name="full_home">全款房</string>
    <string name="mortgage_car">按揭车</string>
    <string name="string_one">按揭/抵押车贷款余额</string>
    <string name="month_money">月供金额</string>
    <string name="month_time">月供期数</string>
    <string name="full_car">全款车</string>
    <string name="full_car_money">全款车估值</string>
    <string name="name_car">名下汽车</string>
    <string name="car">按揭车</string>
    <string name="no_card">没有信用卡</string>
    <string name="edit_need">编辑需求</string>
    <string name="all_select">全选</string>
    <string name="move">移除</string>
    <string name="share">分享</string>
    <string name="manager">管理</string>
    <string name="finish">完成</string>
    <string name="String_1">月供最大金额</string>
    <string name="string_2">大于6期房月供</string>
    <string name="string_3">缴纳大于2年3期传统保单</string>
    <string name="_1_">1</string>
    <string name="_3_">3</string>
    <string name="_2_2">2</string>
    <string name="social">社保</string>
    <string name="_4">4</string>
    <string name="accumulation">公积金</string>
    <string name="limit">信用卡授信额度</string>
    <string name="month_mortgage">每月按揭或抵押贷款</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="lately">最近办理过贷款或信用卡</string>
    <string name="_9">9</string>
    <string name="month_income">月收入方式</string>
    <string name="continuity_fund">连续两年本地公积金</string>
    <string name="continuity">连续两年本地社保</string>
    <string name="perfect">完善资质</string>
    <string name="hold_time">房产证持有时间</string>
    <string name="policy_one">保单1</string>
    <string name="policy_year">年缴保费</string>
    <string name="full_home_money">全款房估值</string>
    <string name="no_have">无</string>
    <string name="more">更多</string>
    <string name="string_test">更多测试数据</string>
    <string name="cancel">取消</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="edit">编辑资质</string>
    <string name="base_need">基本需求</string>
    <string name="info">资质信息</string>

</resources>
