<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_white"
    android:orientation="vertical"
    >

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/mortgage_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/mortgage_home"
        android:textColor="@color/default_black"
        android:textSize="@dimen/sp_16"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/full_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/full_home"
        android:textColor="@color/default_black"
        android:textSize="@dimen/sp_16"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/no_have"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/no_have"
        android:textColor="@color/default_black"
        android:textSize="@dimen/sp_16"
        />


</LinearLayout>
