<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/dp_10"
    android:background="@color/default_white"
    android:layout_marginBottom="@dimen/dp_10"
    android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0_0_0"
        android:textColor="@color/default_gray"
        android:textSize="@dimen/sp_14" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_below="@+id/explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_1"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/default_black"
        android:textSize="@dimen/sp_18" />

    <android.support.v7.widget.AppCompatTextView
      android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/colorLogo"
        android:textSize="@dimen/sp_14"
        android:drawablePadding="@dimen/dp_10"
        android:drawableEnd="@mipmap/jt_right"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>
