<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/default_white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingStart="@dimen/dp_40"
                tools:ignore="RtlSymmetry">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:text="@string/loan_size"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RtlHardcoded" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/right_side"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:text="@string/wan"
                    android:textColor="@color/default_blue"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/loan_money"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:layout_toStartOf="@+id/right_side"
                    android:background="@drawable/fillet_rect_edit"
                    android:focusable="true"
                    android:hint="@string/loan_0"
                    android:inputType="number|numberDecimal"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_4"
                    android:paddingStart="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:textColor="@color/default_blue"
                    android:textColorHint="@color/default_blue"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/default_white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingStart="@dimen/dp_40"
                tools:ignore="RtlSymmetry">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:text="@string/loan_time"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RtlHardcoded" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/right_side_one"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:text="@string/month"
                    android:textColor="@color/default_blue"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/loan_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:layout_toLeftOf="@+id/right_side_one"
                    android:background="@drawable/fillet_rect_edit"
                    android:focusable="true"
                    android:hint="@string/loan_0_month"
                    android:inputType="number"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_4"
                    android:paddingStart="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:textColor="@color/default_blue"
                    android:textColorHint="@color/default_blue"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="?android:attr/listDivider" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/default_white"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="@dimen/dp_40"
                tools:ignore="RtlSymmetry">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:text="@string/good_job"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RtlHardcoded" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/good_job"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:clickable="false"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@mipmap/jt_down"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_20"
                    android:paddingStart="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:text="@string/loan_ok"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="?android:attr/listDivider" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/default_white"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="@dimen/dp_40"
                tools:ignore="RtlSymmetry">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:text="@string/credit"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RtlHardcoded" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/credit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:clickable="false"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@mipmap/jt_down"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_20"
                    android:paddingStart="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:text="@string/no_card"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="?android:attr/listDivider" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/default_white"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="@dimen/dp_40"
                tools:ignore="RtlSymmetry">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:text="@string/repayment_month"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RtlHardcoded" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/repayment_month"
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:clickable="false"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@mipmap/jt_down"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_20"
                    android:paddingStart="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:text="@string/loan_ok"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="?android:attr/listDivider" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/default_white"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="@dimen/dp_40"
                tools:ignore="RtlSymmetry">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:text="@string/handle"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RtlHardcoded" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/handle"
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:clickable="false"
                    android:drawablePadding="@dimen/dp_10"
                    android:drawableRight="@mipmap/jt_down"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_20"
                    android:paddingStart="@dimen/dp_20"
                    android:paddingTop="@dimen/dp_10"
                    android:text="@string/loan_ok"
                    android:textColor="@color/default_black"
                    android:textSize="@dimen/sp_14"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_46"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:background="@drawable/fillet_rect_blue"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/quickly_matching"
                android:textColor="@color/default_white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>

